fixes to spacing sponsor

--- a/styles/Sponsor.css
+++ b/styles/Sponsor.css
@@ -1760,7 +1760,7 @@ h4{
         line-height: 1.4;
         font-size: 12px;
         padding-top: 3px;
-        padding-bottom: 15px;
+        padding-bottom: 25px;
     }
 
     .first-feature.column.nine-tenth{
